feat/added list store coupons swagger docs
